Fix notification overflow

--- a/resources/assets/sass/notifications.scss
+++ b/resources/assets/sass/notifications.scss
@@ -40,3 +40,8 @@ $ice: #DBEDE6;
     top: 6px;
     font-size: 10px;
 }
+
+.notifications-panel-body.panel-body {
+    max-height: 300px;
+    overflow-y: auto;
+}
